--- a/gms/o/index.html
+++ b/gms/o/index.html
@@ -105,7 +105,7 @@
             scenes: [
                 {
                     id: "1",
-                    image: "assets/forest_path.jpg",
+                    image: "assets/forest_path.png",
                     video: "",
                     text: "The forest path stretches before you, dappled sunlight filtering through ancient trees. Something about this place feels both welcoming and mysterious. A sense of adventure fills your heart as you consider your first steps into this unknown world.",
                     choices: [
@@ -117,7 +117,7 @@
                 },
                 {
                     id: "2",
-                    image: "assets/ancient_ruins.jpg",
+                    image: "assets/ancient_ruins.png",
                     video: "",
                     text: "After walking for what seems like hours, you discover ancient stone ruins emerging from the forest floor. Moss-covered pillars frame a central altar, where a faint blue light pulses rhythmically. There's something captivating about its glow.",
                     choices: [
@@ -129,8 +129,8 @@
                 },
                 {
                     id: "3",
-                    image: "assets/guardian_appears.jpg",
-                    video: "assets/guardian_appears.mp4",
+                    image: "assets/guardian.png",
+                    video: "assets/guardian.mp4",
                     text: "As you consider your next move, the blue light intensifies. Mist swirls around the altar, coalescing into a translucent figure. The Guardian of the Forest materializes before you, ancient eyes studying your intentions.",
                     choices: [
                         { text: "Ask what this place is and why you were drawn here", nextScene: "4", type: "neutral" },
