--- a/gms/o/index.html
+++ b/gms/o/index.html
@@ -19,7 +19,8 @@
         #toggle-right { right: 20px; }
         .control-button { background: rgba(0, 0, 0, 0.7); color: white; border: none; padding: 0.5rem; border-radius: 5px; margin: 0.5rem; cursor: pointer; }
         #text-toggle { position: absolute; top: 10px; right: 20px; z-index: 1000; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; }
-        #expand-button { position: absolute; bottom: 10px; right: 20px; z-index: 1000; width: 40px; height: 40px; border-radius: 50%; display: none; align-items: center; justify-content: center; }
+        #expand-button { position: fixed; bottom: 80px; right: 20px; z-index: 1000; width: 40px; height: 40px; border-radius: 50%; display: none; align-items: center; justify-content: center; }
+        @media (display-mode: fullscreen) { #expand-button { bottom: 20px; } }
         .text-minimized #text-area { transform: translateY(calc(100% - 60px)); }
         .text-hidden #text-area { transform: translateY(100%); }
         #story-text { margin-bottom: 1.5rem; line-height: 1.6; font-size: 1.1rem; }
