--- a/gms/o/old/Index.html
+++ b/gms/o/old/Index.html
@@ -141,7 +141,7 @@
                 },
                 {
                     id: "3.1",
-                    image: "assets/guardian_pleased.jpg",
+                    image: "assets/guardian_pleased.png",
                     video: "",
                     text: "The Guardian's expression softens, clearly pleased by your respectful approach. 'Few who find these ruins show such reverence,' it says in a voice like rustling leaves. 'Perhaps you are the one we have waited for.' The Guardian gestures, and a small seedling appears floating in the air before you.",
                     choices: [
@@ -153,7 +153,7 @@
                 },
                 {
                     id: "3.2",
-                    image: "assets/guardian_displeased.jpg",
+                    image: "assets/guardian_displeased.png",
                     video: "",
                     text: "The Guardian's form darkens, storm clouds seemingly brewing within its translucent body. 'Many come seeking only power,' it intones disapprovingly. 'The forest tests all who enter. It gives according to one's heart.' The ground trembles slightly beneath your feet, roots momentarily emerging from the soil around you.",
                     choices: [
@@ -165,7 +165,7 @@
                 },
                 {
                     id: "4",
-                    image: "assets/forest_crossroads.jpg",
+                    image: "assets/forest_crossroads.png",
                     video: "",
                     text: "The Guardian dissipates into mist, leaving you alone once more. As you leave the ruins, you come to a crossroads. Three paths lie before you: one bathed in sunlight leading toward mountains, another disappearing into deeper forest, and a third descending into a misty valley.",
                     choices: [
