--- a/gms/o/index.html
+++ b/gms/o/index.html
@@ -110,7 +110,7 @@
             id: "1",
             image: "assets/park_entrance.png",
             video: "assets/park_entrance.mp4",
-            text: "It's a perfect day for a walk in the park. The sun is shining, birds are singing, and your brown chihuahua, Max, is happily trotting alongside you. The two of you often come here - it's your weekend ritual, a small moment of peace in an otherwise busy life.",
+            text: "It's a perfect day for a walk in the park. The sun is shining, birds are singing, and your brown terrier, Max, is happily trotting alongside you. The two of you often come here - it's your weekend ritual, a small moment of peace in an otherwise busy life.",
             choices: [
                 { text: "Follow the main path through the park", nextScene: "2", type: "neutral" },
                 { text: "Let Max lead the way", nextScene: "2", type: "good" },
@@ -170,7 +170,7 @@
             id: "6",
             image: "assets/futuristic_park.png",
             video: "assets/futuristic_park.mp4",
-            text: "The trees now have glowing blue lines running along their trunks. The park benches are sleek, curved metal with no visible supports. The path beneath your feet pulses with subtle light. In the distance, you see impossible towers stretching into the sky, and vehicles that seem to float above the ground. Then, you spot something familiar - a small brown chihuahua being picked up by someone in a uniform.",
+            text: "The trees now have glowing blue lines running along their trunks. The park benches are sleek, curved metal with no visible supports. The path beneath your feet pulses with subtle light. In the distance, you see impossible towers stretching into the sky, and vehicles that seem to float above the ground. Then, you spot something familiar - a small brown terrier being picked up by someone in a uniform.",
             choices: [
                 { text: "Shout 'That's my dog!' and run toward them", nextScene: "7", type: "bad" },
                 { text: "Approach cautiously and assess the situation", nextScene: "7", type: "neutral" },
