--- a/n/index.html
+++ b/n/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>P2P Chat — Serverless (deep diagnostics)</title>
+<title>P2P Chat — STUN‑first (multi‑STUN)</title>
 <style>
   :root { --bg:#0b0f14; --fg:#e7edf3; --muted:#9fb0c3; --card:#121923; --accent:#5ec5ff; --warn:#ffb86b; --err:#ff6b6b; }
   html,body{background:var(--bg);color:var(--fg);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,sans-serif;margin:0}
@@ -31,9 +31,9 @@
 </head>
 <body>
 <div class="wrap">
-  <h1>P2P Chat — Serverless</h1>
+  <h1>P2P Chat — STUN‑first</h1>
   <div class="muted" style="margin:-6px 0 16px">
-    WebRTC data channels; link <b>or</b> code signaling. STUN by default (TURN optional). <span id="ver" class="small"></span>
+    WebRTC data channels; link <b>or</b> code signaling. Uses multiple public <b>STUN</b> servers by default (TURN optional). <span id="ver" class="small"></span>
   </div>
 
   <!-- Host controls -->
@@ -113,32 +113,45 @@
     </div>
   </div>
 
-  <p class="small muted">If it stalls or fails, check the log below for ICE details. Without TURN some networks can’t connect.</p>
+  <p class="small muted">This build is STUN‑first. If a direct path can’t be found, it will fail unless TURN is configured. Check the log for candidate types (host/srflx/relay).</p>
 </div>
 
 <script>
 (() => {
-  // ======== Optional TURN (fill in if you have one; otherwise leave empty) ========
-  const TURN_URL  = "";   // e.g., "turn:turn.example.com:3478"
-  const TURN_USER = "";   // e.g., "user"
-  const TURN_PASS = "";   // e.g., "pass"
+  // ======== NEW: Multi‑STUN defaults + optional TURN ========
+  // You can override via URL like: ?stun=stun:stun.l.google.com:19302,stun:stun1.l.google.com:19302
+  const DEFAULT_STUNS = [
+    "stun:stun.l.google.com:19302",
+    "stun:stun1.l.google.com:19302",
+    "stun:stun2.l.google.com:19302",
+    "stun:stun3.l.google.com:19302",
+    "stun:stun4.l.google.com:19302",
+    "stun:global.stun.twilio.com:3478"
+  ];
 
-  const VERSION = "diag-2.0"; document.getElementById("ver").textContent = `v${VERSION}`;
+  const url = new URL(window.location.href);
+  const qs  = k => url.searchParams.get(k);
+  const customStuns = (qs("stun")||"").split(",").map(s => s.trim()).filter(Boolean);
+
+  // Optional TURN (leave empty for STUN‑only). You can also inject via query params for quick tests.
+  const TURN_URL  = qs("turn")  || "";   // e.g., "turn:relay.metered.live:80"
+  const TURN_USER = qs("tuser") || "";   // e.g., "user"
+  const TURN_PASS = qs("tpass") || "";   // e.g., "pass"
+
+  const VERSION = "stun-first-2.1"; document.getElementById("ver").textContent = `v${VERSION}`;
 
   // ---------- utils ----------
   const $ = id => document.getElementById(id);
   const b64 = { enc: o => btoa(unescape(encodeURIComponent(JSON.stringify(o)))), dec: s => JSON.parse(decodeURIComponent(escape(atob(s)))) };
   const genKey = () => Math.random().toString(36).slice(2,10).toUpperCase();
   const genId  = () => Math.random().toString(36).slice(2) + Date.now().toString(36);
-  const url = new URL(window.location.href);
-  const qs  = k => url.searchParams.get(k);
   function show(ids){ const want=Array.isArray(ids)?ids:[ids]; for(const id of ["landingPanel","hostPanel","joinPanel","chatPanel"]) $(id).style.display = want.includes(id) ? "" : "none"; }
   const logEl = $("log");
   function log(msg, cls=""){ const p=document.createElement("div"); p.className="msg "+cls; p.innerHTML=msg; logEl.appendChild(p); logEl.scrollTop=logEl.scrollHeight; }
-  const info = m => log(`<span class="muted">${m}</span>`,"msg sys");
-  const error = m => log(`<span class="err">❌ ${m}</span>`,"msg err");
+  const info = m => log(`<span class="muted">${m}</span>`,`msg sys`);
+  const error = m => log(`<span class="err">❌ ${m}</span>`,`msg err`);
   function copyText(t){ navigator.clipboard.writeText(t).then(()=>info("Copied to clipboard.")).catch(()=>prompt("Copy:", t)); }
-  const esc = s => s.replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+  const esc = s => s.replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;','\'':'&#39;'}[m]));
   const setStatus = s => $("statusBadge") && ($("statusBadge").textContent = s);
   const setJoinStatus = s => $("joinStatus") && ($("joinStatus").textContent = s);
 
@@ -153,9 +166,10 @@
 
   // ---------- diagnostics helpers ----------
   const rtcConfig = (() => {
-    const servers = [{ urls: ["stun:stun.l.google.com:19302"] }];
+    const stunUrls = (customStuns.length ? customStuns : DEFAULT_STUNS);
+    const servers = [ { urls: stunUrls } ];
     if (TURN_URL && TURN_USER && TURN_PASS) servers.push({ urls: [TURN_URL], username: TURN_USER, credential: TURN_PASS });
-    return { iceServers: servers };
+    return { iceServers: servers /*, iceTransportPolicy: "all"*/ };
   })();
 
   function candType(c){ if(!c||!c.candidate) return "?"; const m=c.candidate.match(/ typ (\w+) /); return m?m[1]:"?"; } // host|srflx|relay
@@ -174,7 +188,7 @@
     pc.onicecandidateerror = e => error(`[${role}] onicecandidateerror: ${e.errorText || e.errorCode || "unknown"}`);
     pc.oniceconnectionstatechange = () => {
       info(`[${role}] iceConnectionState → ${pc.iceConnectionState}`);
-      if (pc.iceConnectionState === "failed") error(`[${role}] ICE failed — NAT/firewall likely blocked P2P (try another network or enable TURN).`);
+      if (pc.iceConnectionState === "failed") error(`[${role}] ICE failed — this network likely blocks P2P. Configure TURN or try another network.`);
     };
     pc.onconnectionstatechange = () => info(`[${role}] connectionState → ${pc.connectionState}`);
   }
@@ -330,8 +344,8 @@
     show(["hostPanel","chatPanel"]); $("landingPanel").style.display="none"; rosterRender(); setStatus("Waiting for peers…");
     info("Chat created. Use Copy Invite Link or Copy Invite Code.");
     history.replaceState({}, "", location.pathname+`?room=${state.roomKey}&host=1&name=${encodeURIComponent(state.me.name)}&title=${encodeURIComponent(state.roomName)}`);
-    if (TURN_URL && TURN_USER && TURN_PASS) info("TURN is enabled in this build.");
-    else info("TURN not configured (STUN only). Some networks may fail.");
+    if (TURN_URL && TURN_USER && TURN_PASS) info("TURN is enabled (fallback available).");
+    else info("TURN not configured — STUN‑only. Some networks may fail.");
   };
 
   $("inviteLinkBtn").onclick = async () => {
@@ -361,7 +375,7 @@
       const obj = b64.dec($("answerCodeInput").value.trim());
       if(obj.kind!=="answer") throw new Error("Not an Answer Code");
       await hostApplyAnswer(obj.invite, obj.sdp);
-      info("Answer applied. If not connected in ~20s, try a new invite, different networks, or TURN.");
+      info("Answer applied. If not connected in ~20s, try a new invite, different networks, or enable TURN.");
       $("answerCodeInput").value="";
     } catch(e){ error("Failed to apply answer: "+e.message); }
   };
@@ -388,8 +402,8 @@
       state.roomKey=room||state.roomKey; state.roomName=decodeURIComponent(title||""); state.me.name=decodeURIComponent(name||"");
       rosterRender(); setStatus("Waiting for peers…");
       info("Host view restored.");
-      if (TURN_URL && TURN_USER && TURN_PASS) info("TURN is enabled in this build.");
-      else info("TURN not configured (STUN only). Some networks may fail.");
+      if (TURN_URL && TURN_USER && TURN_PASS) info("TURN is enabled (fallback available).");
+      else info("TURN not configured — STUN‑only.");
       if(encoded){
         try{
           const obj=b64.dec(decodeURIComponent(encoded));
