--- a/e2/index.html
+++ b/e2/index.html
@@ -50,7 +50,7 @@
         right: 0;
         bottom: 0;
         border: none;
-        height: 100%;
+        height: calc(100% - 30px);
         width: 100%;
       }
       /* Editors container fills lowerBox below the menu */
