--- a/m2/index.html
+++ b/m2/index.html
@@ -22,7 +22,7 @@
     <button id="btnS">SAVE</button><button id="btnE">EXPORT</button><button id="btnI">IMPORT</button><input type="file" id="fInput" style="display:none;" />
     <span id="restoreSpan" style="float:right;display:none;"><button id="btnRestore">50</button></span>
   </div>
-  <iframe id="preview" style="position:absolute;top:30px;border:0;width:100%;height:100%"></iframe>
+  <iframe id="preview" style="position:absolute;top:30px;border:0;width:100%;height:calc(100% - 30px)"></iframe>
 </div>
 <div id="lowerBox">
   <div class="lowerMenu">
