--- a/gms/pwa/sudoku/index.html
+++ b/gms/pwa/sudoku/index.html
@@ -118,7 +118,7 @@ e.preventDefault();
 this.deferredPrompt = e;
 });
 document.getElementById('installBtn').addEventListener('click', () => this.installApp());
-if ('serviceWorker' in navigator) {navigator.serviceWorker.register('/sw.js').then(reg => console.log('SW registered', reg)).catch(err => console.log('SW failed', err));}
+if ('serviceWorker' in navigator) {navigator.serviceWorker.register('/gms/pwa/sudoku/sw.js').then(reg => console.log('SW registered', reg)).catch(err => console.log('SW failed', err));}
 }
 createGrid() {
 const gridEl = document.getElementById('grid');
